# doc/openapi.yaml
@@ -308,6 +308,12 @@ paths:
           in: query
           schema:
             type: number
+        - name: radius_km
+          in: query
+          schema:
+            type: number
+            default: 10
+            maximum: 50
         - name: poi_type
           in: query
           schema:
@@ -324,6 +330,10 @@ paths:
           in: query
           schema:
             type: string
+        - name: open_now
+          in: query
+          schema:
+            type: boolean
         - name: limit
           in: query
           schema:
